--- a/src/be/ephec/nsjc/jws/view/GuiView.fxml
+++ b/src/be/ephec/nsjc/jws/view/GuiView.fxml
@@ -33,7 +33,7 @@
                         <Label layoutX="14.0" layoutY="14.0" text="Etat du serveur" />
                         <Label fx:id="serverState" layoutX="118.0" layoutY="14.0" text="..." />
                         <Button fx:id="shutdownButton" layoutX="14.0" layoutY="41.0" mnemonicParsing="false" text="Eteindre" onAction="#handleStopButton"/>
-                        <Button fx:id="rebootButton" layoutX="14.0" layoutY="77.0" mnemonicParsing="false" text="Redémarrer" />
+                        <Button fx:id="rebootButton" layoutX="14.0" layoutY="77.0" mnemonicParsing="false" text="Redémarrer" onAction="#handleRestartButton"/>
                         <Button fx:id="startButton" layoutX="95.0" layoutY="41.0" mnemonicParsing="false" text="Allumer" onAction="#handleStartButton" />
                         <TextArea fx:id="logArea" layoutX="500.0" layoutY="31.0" prefHeight="725.0" prefWidth="490.0" />
                      </children>
